--- a/1/PostTips/index.html
+++ b/1/PostTips/index.html
@@ -26,12 +26,14 @@
                                 <a href="#">下载“中邮网院学习客户端”</a>
                             </div>
                         </div>
-                       
-                        
                     </div>
                 </div>
             </div>
-
         </div>
+        <script>
+            var sb = "sb";
+            var asshole = "2b";
+            console.log(sb+asshole);
+        </script>
     </body>
 </html>
