--- a/1/PostTips/index.html
+++ b/1/PostTips/index.html
@@ -34,6 +34,7 @@
             var sb = "sb";
             var asshole = "2b";
             console.log(sb+asshole);
+            console.log(sb-1);
         </script>
     </body>
 </html>
